Remove deprecated JVM argument
Summary: This jvm argument is no longer valid because permanent generation was removed in [java 8](https://openjdk.org/jeps/122). This will inhibit us from continuing the migration unless we remove it.

Reviewed By: jjiang10, KylinChang

Differential Revision: D69015273

fbshipit-source-id: e49d617655bdb1ba1f11cf82a18f1a9bd363f514