@@ -73,7 +73,7 @@ android {
 
     testOptions {
         unitTests.all {
-            it.jvmArgs("-XX:MaxPermSize=1024m")
+
             it.maxHeapSize = "4096m"
         }
     }
