@@ -86,7 +86,7 @@ android {
 
     testOptions {
         unitTests.all {
-            it.jvmArgs("-XX:MaxPermSize=1024m")
+
             it.maxHeapSize = "4096m"
             // CrashShieldHandlerDebugTest is only available on Sandcastle and Github Actions
             // Because local compiling environment may recompile CrashShieldHandler multiple times
